BAC-642
Example:
1. Edit endpoint for remove users and sessions info.
Test:
1. Edit google and apple test for remove unnecessary code.
2. Refactoring and add new tests for linkAccount.
