# example/basic/main.go
@@ -144,8 +144,9 @@ func main() { // nolint
 
 	group.GET("/profile", rauth.AuthMiddleware(), controllers.Profile)
 	r.POST("/profile", rauth.AuthMiddleware(), controllers.UpdateProfile)
-	r.DELETE("/profile", rauth.AuthMiddleware(), func(c *gin.Context) {
-		controllers.Remove(c, ss, us)
+	// test route for truncate accounts
+	r.DELETE("/clearAll", func(c *gin.Context) {
+		controllers.RemoveAll(c, ss, us)
 	})
 
 	err := rauth.InitHandlers()
